--- a/Hakatonya2023/Assembly-CSharp.csproj
+++ b/Hakatonya2023/Assembly-CSharp.csproj
@@ -56,14 +56,19 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\3rdPerson\PersonController.cs" />
-    <Compile Include="Assets\Scripts\Strategy\StrategyController.cs" />
-    <Compile Include="Assets\Scripts\TileBased\TileBasedController.cs" />
-    <Compile Include="Assets\Scripts\TileBased\Tile.cs" />
-    <Compile Include="Assets\Scripts\Hexagon\HexController.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\3rdPerson\PersonController.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\Strategy\StrategyController.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\TileBased\TileBasedController.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\TileBased\Tile.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\Hexagon\HexController.cs" />
     <Compile Include="Assets\Scripts\Top-Down\TopDownController.cs" />
     <Compile Include="Assets\Scripts\Loader.cs" />
-    <Compile Include="Assets\Scripts\2.5Platformer\PlatformerPlayerController.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\2.5Platformer\PlatformerPlayerController.cs" />
+    <Compile Include="Assets\Scripts\HeroController.cs" />
+    <Compile Include="Assets\GameManager.cs" />
+    <Compile Include="Assets\HUDManager.cs" />
+    <Compile Include="Assets\Food.cs" />
+    <Compile Include="Assets\Enemy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -73,7 +78,6 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\test.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\Prefabs\test.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
@@ -82,7 +86,6 @@
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\Scripts\test 1.txt" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
