--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 Hakatonya2023/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 Hakatonya2023/.vs/Hakatonya2023/v16/.suo
+*.log
+*.cache
+*.cache
+Hakatonya2023/obj/Debug/Assembly-CSharp.csproj.AssemblyReference.cache
+*.dwlt
