Crab animation added

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Hakatonya2023/obj/Debug/Assembly-CSharp.csproj.AssemblyReference.cache
 *.log
 Hakatonya2023/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 *.dwlt
+Hakatonya2023/.vs/Hakatonya2023/v16/.suo
+*.log
