--- a/Hakatonya2023/Assembly-CSharp.csproj
+++ b/Hakatonya2023/Assembly-CSharp.csproj
@@ -56,27 +56,28 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Obsoled\3rdPerson\PersonController.cs" />
-    <Compile Include="Assets\Scripts\HeroController.cs" />
     <Compile Include="Assets\Scripts\Spawn\SpawnArea.cs" />
     <Compile Include="Assets\Scripts\HUDManager.cs" />
     <Compile Include="Assets\Models\Container_ship\Scripts\FreeflightCamera.cs" />
-    <Compile Include="Assets\Scripts\Obsoled\Strategy\StrategyController.cs" />
     <Compile Include="Assets\Scripts\Obsoled\TileBased\TileBasedController.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraShake.cs" />
     <Compile Include="Assets\Scripts\Obsoled\TileBased\Tile.cs" />
-    <Compile Include="Assets\Scripts\HeroLevel.cs" />
     <Compile Include="Assets\Scripts\Obsoled\Hexagon\HexController.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\AI\EnemyNoRotation.cs" />
-    <Compile Include="Assets\Scripts\Top-Down\TopDownController.cs" />
     <Compile Include="Assets\Scripts\Spawn\Spawner.cs" />
     <Compile Include="Assets\Scripts\AI\Enemy.cs" />
     <Compile Include="Assets\Scripts\PutObjectOnGround.cs" />
+    <Compile Include="Assets\CutSceneManager.cs" />
+    <Compile Include="Assets\Scripts\Food.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\3rdPerson\PersonController.cs" />
+    <Compile Include="Assets\Scripts\HeroController.cs" />
+    <Compile Include="Assets\Scripts\Obsoled\Strategy\StrategyController.cs" />
+    <Compile Include="Assets\Scripts\HeroLevel.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\AI\EnemyNoRotation.cs" />
+    <Compile Include="Assets\Scripts\Top-Down\TopDownController.cs" />
     <Compile Include="Assets\Scripts\Loader.cs" />
     <Compile Include="Assets\Scripts\House.cs" />
     <Compile Include="Assets\Scripts\Obsoled\2.5Platformer\PlatformerPlayerController.cs" />
-    <Compile Include="Assets\Scripts\Food.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Models\Free Low Poly Desert Pack\Materials\Shaders\Vertex_Color_Unlit.shader" />
@@ -767,6 +768,9 @@
     <Reference Include="Unity.VisualScripting.Flow.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.VisualEffectGraph.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.VisualEffectGraph.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.VSCode.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
     </Reference>
@@ -784,6 +788,9 @@
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualEffectGraph.Runtime">
+      <HintPath>Library\ScriptAssemblies\Unity.VisualEffectGraph.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
       <HintPath>Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
